--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 <div class="container mt-4">
-    <p>dashboard works!</p>
+    <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
