--- a/src/app/dashboard/footer/footer.component.css
+++ b/src/app/dashboard/footer/footer.component.css
@@ -1,6 +1,7 @@
 .footer {
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     width: 100%;
     text-align: center;
+    padding: 20px;
 }
