--- a/src/app/dashboard/list-usuarios/list-usuarios.component.html
+++ b/src/app/dashboard/list-usuarios/list-usuarios.component.html
@@ -1,1 +1,8 @@
-<p>list-usuarios works!</p>
+<div class="row d-flex justify-content-center" *ngIf="loading">
+    <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+</div>
+<div class="row">
+    <div *ngFor="let usuario of listUsuarios" class="col-lg-3" style="margin: 30px;">
+        <app-card-usuario [user]="usuario"></app-card-usuario>
+    </div>
+</div>
