--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-dark">
-    <a class="navbar-brand mx-auto">ROUTING AND SERVICES</a>
+    <a class="navbar-brand mx-auto" routerLink="/">ROUTING AND SERVICES</a>
 </nav>
