--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -3,9 +3,9 @@
         <div class="col-lg-12 text-center">
             <p> <strong>ROUTING AND SERVICES</strong> </p>
             <div class="col-lg-2 offset-lg-5 pad">
-                <hr>
+                <hr style="margin: 0 auto; margin-bottom: 20px;">
             </div>
-            <button class="btn btn-primary btn-xl">Ingresar</button>
+            <button class="btn btn-primary btn-xl" (click)="irDashboard()">Ingresar</button>
         </div>
     </div>
 </div>
