--- a/src/app/dashboard/list-usuarios/card-usuario/card-usuario.component.html
+++ b/src/app/dashboard/list-usuarios/card-usuario/card-usuario.component.html
@@ -1,5 +1,5 @@
-<div class="card" style="width: 18rem;">
-    <img [src]="imgUrl" alt="" class="card-img-top">
+<div class="card" style="width: 18rem; border-top-left-radius: 15px; border-top-right-radius: 15px;">
+    <img [src]="imgUrl" alt="" class="card-img-top" style="border-top-left-radius: 15px; border-top-right-radius: 15px;">
     <div class="card-body">
         <h5 class="card-title text-center">{{ name }}</h5>
         <p class="card-text text-center">{{ email }}</p>
